# aya-discord-bot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yml  pyproject.toml
.claude/commands/: deploy.md  fix-issue.md  review.md
.claude/rules/: api-conventions.md  code-style.md
.claude/skills/deploy/: SKILL.md
.claude/skills/everything-claude-code/: SKILL.md
src/: config.py  logging_setup.py  main.py
